@@ -33,11 +33,10 @@ import org.testng.annotations.Test;
 import static org.testng.Assert.*;
 
 /**
- * VarargsRecordsTest
- *
  * @test
- * @compile --enable-preview -source ${jdk.version} VarargsRecordsTest.java
- * @run testng/othervm --enable-preview VarargsRecordsTest
+ * @bug 8246774
+ * @summary test for varargs record components
+ * @run testng VarargsRecordsTest
  */
 @Test
 public class VarargsRecordsTest {
